# bridge

./: .editorconfig  .env.example  .eslintignore  .eslintrc.cjs  .gitattributes  .gitignore  .prettierignore  .prettierrc  .stylelintcache  README.md  app.vue  bun.lockb  check-copyright.js  commitlint.config.cjs  nuxt.config.ts  package.json  pnpm-lock.yaml  stylelint.config.cjs  tailwind.config.js  tsconfig.json
src-tauri/: .env.example  .gitignore  .taurignore  Cargo.toml  Info.plist  build.rs  tauri.conf.json
src-tauri/.sqlx/: query-002c6b7e2192981832f5bdc4b224e921cfe4d331c2832043562b642b6ae04137.json  query-04735ba6a3b5decdffaa0f9e4864c2d3667d330882c6733f19c4471c6ea115b8.json  query-04ac2de1931570f7fd645e6b2674ff0ee1ad903f663bd95da0308612dd80ce71.json  query-0b7833ac872bc8c5978ded58c3a2766527bdafc19a5a7034e73812aa8211f77c.json  query-0bc4afa8d3b6a6cbf6d47e5edca2b53de5dc98b29d96635046837ae4d35d9e3f.json  query-0c899970c6e8a595b6936f3b9e7ee12194c59adbf9709c8466e677f3c93adc16.json  query-0f9f54fd7ee0fdd71ff9317aab65ce68105d1275eb79fdeecd7ba18232c4ab11.json  query-1533433fd5a08b86fcf1e54db66958e6a0ac3c2051ef640976c48338177dc473.json  query-1649c1fe6616307815d969a19cd21d0f6548d9c43065014c0ce1f53ef784d692.json  query-16f0c6aea5bad13974ee1875ffab644d832cf4bb22495dbc5947f5a3b3d941f7.json  query-199641e40b2a345b58790a3c8c732466fd6e95b8befb08a8ae558a8e7c3a27ae.json  query-1d216c88a37b636a7b4ec010376610a29f3a2f8101f6be477588bc88bf1022ab.json  query-23064d7492167615b063828fb7fee37dce804db6f7d552b31941fe40b9a96816.json  query-232038c0967f3171e70d44e47f8b558295451b7a3af8aa1b41d0832101784b03.json  query-250522648f1cc07b303d65a561e4f1a01af245262a0e4cdf5c8b23e4f127552c.json  query-255bdae932372755e98cf59b4dfc9bd47ff32a5d45270815e66b6a40b07096b8.json  query-261d9d3cc7411c57f4841f77eb64420c60854945bef7dc9a70919333a1a29185.json  query-264298adb12ece651fc2b74f10f8ee6e7a318b719b31e0762c00d0b6f9a1435b.json  query-27084bd55c0cbb57eb22005c44bdab6c8660e250f4a2c324d22c967a87d27cc9.json  query-2885d5be2282db6056d2c0f39495342d588b1230099b8dc0c66dedcc6e73b723.json  query-30db68e64f67a12bf0083b08e6ad904a8b27e79d34f6fb638dd8bb768b25a07c.json  query-30e1c063fb3078ac3561911485936b62164fdde3c0a8c9808a4d98c311f0482e.json  query-317f243dd32ee14eccec07c2240f2cddc2a2de8fc02e94a6ff8ab325dd9c09bf.json  query-35226d588b89f06b431690a1ee16de7d2d1da290af0f5797c3682061b385d751.json  query-35bbb6838348958fbee5194d9fc748a0f86b75ba620459e891a500bf70ef1a79.json  query-39b950fbd9c50c18a3bb5062811192db8d81ef5bf495f443505cd91d322c33ae.json  query-3d2a49f9f4551c2f241dee41abd4e60b459f7a29d6057b0e73d723e40481bb92.json  query-3d6ef31d3a231ff076131ded095e1e2a5a66deb315dc1c8aedff3e62e3268ef5.json  query-3f21194a4f4e3098ec69df9d7242d242d2cd66db32b4e01148a7ac18b4e3c501.json  query-4227fb013b16c1f25f33534d85374cf15dbadb5b346f71b1e7b72774f86886b1.json  query-42e0813c97a1651a8b3c19b803690b0d2434dfab88dd974fc61e408706caeabb.json  query-44d0b47591f58651b0db7fb6947de66f83784d5c18b6447e72eabe72e2381c96.json  query-454255901624e2e105dafef5288620f2c86193e9002ad0122ee9f97e16fb3bb1.json  query-47897a164195c53fe4e45b1377e940668cd9b6e4d9dc93d9dab5601c53d0891f.json  query-47adf7935de4e1f5fcef6e9d69c4df50954e1b010440d3abc4788c466ab2895e.json  query-4b57ccb398339c664b74fb9b91976f21afb027e3ab725637441221b883aacf24.json  query-4e5a138f9acf71f9178757151dffcebd055b54576f393c90f4300400fbf257df.json  query-5017775bd1ce600ae3d75e1a0cc4898d7b5279dcede208ef928c12fc86e4a039.json  query-502c6662e80b8dd95f046336381ab446f420dc413ee7a21125b66c48adfce8dd.json  query-51543d296fe2ac5284411ad34fee0b167919a13a92efdea0444c968f9d579cf8.json  (+88 more)
src-tauri/db/: seeds.sql
src-tauri/db/migrations/: 20240105190128_create_abilities.down.sql  20240105190128_create_abilities.up.sql  20240106011111_create_agents.down.sql  20240106011111_create_agents.up.sql  20240106223511_create_chats.down.sql  20240106223511_create_chats.up.sql  20240106223521_create_messages.down.sql  20240106223521_create_messages.up.sql  20240108215818_add_parameters_json_to_abilities.up.sql  20240115205454_create_tasks.down.sql  20240115205454_create_tasks.up.sql  20240303012339_create_models.down.sql  20240303012339_create_models.up.sql  20240306204504_add_is_pinned_to_chats.up.sql  20240309170232_add_function_calling_to_models.up.sql  20240312212744_add_kind_to_chats.up.sql  20240312221351_add_model_full_name_to_chats.down.sql  20240312221351_add_model_full_name_to_chats.up.sql  20240312230139_add_updated_at_to_messages.down.sql  20240312230139_add_updated_at_to_messages.up.sql  20240319222540_add_is_enabled_to_agents.up.sql  20240320015702_create_task_results.up.sql  20240404091440_create_table_pages.up.sql  (+5 more)
src-tauri/icons/: icon.icns
src-tauri/src/: abilities.rs  browser.rs  channel.rs  chats.rs  database.rs  docker.rs  embeddings.rs  errors.rs  lib.rs  main.rs  messages.rs  pages.rs  settings.rs  task_executor.rs  task_planner.rs  types.rs  utils.rs
(+550 files in other folders)
