[package]
name = "bridge"
version = "0.1.2"
description = "Autonomous AI Agents IDE"
authors = ["StarfleetAI <mail@starfleetai.com>"]
license = "Apache-2.0"
repository = "https://github.com/StarfleetAI/bridge"
default-run = "bridge"
edition = "2021"
rust-version = "1.77"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.5.1", features = [] }

[dependencies]
anyhow = "1.0.81"
askama = "0.12.1"
async-recursion = "1.1.0"
bollard = "0.16.0"
chrono = { version = "0.4.35", features = ["serde"] }
dotenvy = "0.15.7"
fantoccini = { version = "0.19.3", default-features = false, features = ["rustls-tls"] }
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
futures-util = "0.3.30"
markdown = "1.0.0-alpha.16"
reqwest = { version = "0.12.0", default-features = false, features = ["rustls-tls", "json", "http2"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sqlx = { version = "0.7", features = ["runtime-tokio", "tls-rustls", "sqlite", "migrate", "chrono"] }
tauri = { version = "1.6.1", features = ["shell-open"] }
tauri-plugin-deep-link = "0.1.2"
thiserror = "1.0.58"
tokio = { version = "1.37.0", features = ["full"] }
tracing = { version = "0.1.40" }
tracing-subscriber = { version = "0.3.18", features = ["fmt", "env-filter"] }

[features]
# this feature is used for production builds or when `devPath` points to the filesystem and the built-in dev server is disabled.
# If you use cargo directly instead of tauri's cli you can use this feature flag to switch between tauri's `dev` and `build` modes.
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
